--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="nav-wrapper">
-    <a class="brand-logo" routerLink="/login">Recipe App</a>
+    <a class="brand-logo" routerLink="/login">Recipe APPApp</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a routerLink="/categories">All Categories</a></li>
 
